--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Johno Crawford</h1>
-						<p>Software Architect, Security &amp; Web Technology Specialist at Sulake</p>
+						<p>Software Architect at Sulake</p>
                         <p>Java &nbsp;&bull;&nbsp; Security &nbsp;&bull;&nbsp; MMOG &nbsp;&bull;&nbsp; Social networking</p>
 						<nav>
 							<ul>
