--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Johno Crawford</h1>
-						<p>Software Architect at Sulake</p>
+						<p>Software Architect</p>
                         <p>Java &nbsp;&bull;&nbsp; Security &nbsp;&bull;&nbsp; MMOG &nbsp;&bull;&nbsp; Social networking</p>
 						<nav>
 							<ul>
@@ -31,7 +31,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<!--span class="copyright">&copy; Johno Crawford.</span-->
+						<span class="copyright">&copy; NWGG Pty Ltd.</span>
 					</footer>
 
 			</div>
