--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; NWGG Pty Ltd.</span>
+						<span class="copyright">&copy; <a href="http://www.nwgg.com.au">NWGG Pty Ltd</a>.</span>
 					</footer>
 
 			</div>
