--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-		<script src="assets/js/fingerprint2.min.js"></script>
+		<script src="assets/js/fp2.min.js"></script>
 		<script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
