--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
-
-				<!-- Header -->
+					<!-- Header -->
 					<header id="header">
 						<h1>Johno Crawford</h1>
 						<p>Software Architect</p>
@@ -29,9 +28,9 @@
 						</nav>
 					</header>
 
-				<!-- Footer -->
+					<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; <a href="http://www.nwgg.com.au">NWGG Pty Ltd</a>.</span>
+						<span class="copyright">&copy; <a href="https://www.nwgg.com.au">NWGG Pty Ltd</a>.</span>
 					</footer>
 
 			</div>
