--- a/privacy_20240329.html
+++ b/privacy_20240329.html
@@ -1,15 +1,17 @@
-Italian
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h2>Informativa sulla Privacy</h2>
+    <p>Ultimo aggiornamento: 20240329</p>
+    <p>Questa applicazione non raccoglie né conserva alcun dato personale dei suoi utenti. Funziona senza richiedere, tracciare o condividere alcuna informazione personale.</p>
 
-Informativa sulla Privacy
-
-Ultimo aggiornamento: 20240329
-
-Questa applicazione non raccoglie né conserva alcun dato personale dei suoi utenti. Funziona senza richiedere, tracciare o condividere alcuna informazione personale. Le modifiche a questa politica verranno aggiornate in questa pagina.
-
-English
-
-Privacy Policy
-
-Last updated: 20240329
-
-This application does not collect or store any personal data from its users. It operates without requiring, tracking, or sharing any personal information. Changes to this policy will be updated on this page.
+    <h2>Privacy Policy</h2>
+    <p>Last updated: 20240329</p>
+    <p>This application does not collect or store any personal data from its users. It operates without requiring, tracking, or sharing any personal information.</p>
+</body>
+</html>
