--- a/privacy_20240329.html
+++ b/privacy_20240329.html
@@ -6,12 +6,24 @@
     <title>Privacy Policy</title>
 </head>
 <body>
-    <h2>Informativa sulla Privacy</h2>
-    <p>Ultimo aggiornamento: 20240329</p>
-    <p>Questa applicazione non raccoglie né conserva alcun dato personale dei suoi utenti. Funziona senza richiedere, tracciare o condividere alcuna informazione personale.</p>
-
     <h2>Privacy Policy</h2>
-    <p>Last updated: 20240329</p>
-    <p>This application does not collect or store any personal data from its users. It operates without requiring, tracking, or sharing any personal information.</p>
+    <p>Last updated: 2024-04-06</p>
+    <p>This application is developed and maintained by Johnathan Crawford, and can be contacted via email developer@johno.it</p>
+    <p>This application does not collect or store any personal data from its users. It operates without requiring, tracking, or sharing any personal information. However, we are committed to ensuring the privacy and security of our users. Should the app in the future access, collect, use, or share any personal or sensitive user data, this policy will be updated accordingly to fully disclose such practices.</p>
+    <p>For any privacy-related inquiries, please contact our privacy team at [Contact Information].</p>
+    <h3>Data Handling Practices</h3>
+    <p>Currently, our application does not access, collect, use, or share personal or sensitive user data. Should this change in the future, we will update this policy to provide comprehensive disclosure of our data handling practices, including the types of personal and sensitive user data accessed, collected, used, and shared, and any parties with which any personal or sensitive user data is shared.</p>
+    <h3>Data Security and Retention</h3>
+    <p>Any data that the app might access in the future will be handled with the utmost security, following industry-standard practices to ensure data protection. Our data retention policy will detail the length of time any data is kept and the procedures for its secure deletion.</p>
+    
+    <h2>Informativa sulla Privacy</h2>
+    <p>Ultimo aggiornamento: 2024-04-06</p>
+    <p>Questa applicazione è sviluppata e mantenuta da Johnathan Crawford, e può essere contattata tramite email developer@johno.it</p>
+    <p>Questa applicazione non raccoglie né conserva alcun dato personale dei suoi utenti. Funziona senza richiedere, tracciare o condividere alcuna informazione personale. Tuttavia, ci impegniamo a garantire la privacy e la sicurezza dei nostri utenti. Nel caso in cui in futuro l'app dovesse accedere, raccogliere, utilizzare o condividere qualsiasi dato personale o sensibile, questa politica verrà aggiornata di conseguenza per divulgare completamente tali pratiche.</p>
+    <p>Per qualsiasi domanda relativa alla privacy, si prega di contattare il nostro team per la privacy a [Informazioni di contatto].</p>
+    <h3>Pratiche di gestione dei dati</h3>
+    <p>Attualmente, la nostra applicazione non accede, raccoglie, utilizza o condivide dati personali o sensibili degli utenti. Qualora ciò dovesse cambiare in futuro, aggiorneremo questa politica per fornire una divulgazione completa delle nostre pratiche di gestione dei dati, incluse le tipologie di dati personali e sensibili accessi, raccolti, utilizzati e condivisi, e qualsiasi parte con cui vengono condivisi dati personali o sensibili.</p>
+    <h3>Sicurezza e conservazione dei dati</h3>
+    <p>Qualsiasi dato che l'app potrebbe accedere in futuro sarà trattato con la massima sicurezza, seguendo le pratiche standard del settore per garantire la protezione dei dati. La nostra politica di conservazione dei dati dettaglierà la durata della conservazione dei dati e le procedure per la loro cancellazione sicura.</p>
 </body>
 </html>
