--- a/privacy_20240329.html
+++ b/privacy_20240329.html
@@ -10,7 +10,7 @@
     <p>Last updated: 2024-04-06</p>
     <p>This application is developed and maintained by Johnathan Crawford, and can be contacted via email developer@johno.it</p>
     <p>This application does not collect or store any personal data from its users. It operates without requiring, tracking, or sharing any personal information. However, we are committed to ensuring the privacy and security of our users. Should the app in the future access, collect, use, or share any personal or sensitive user data, this policy will be updated accordingly to fully disclose such practices.</p>
-    <p>For any privacy-related inquiries, please contact our privacy team at [Contact Information].</p>
+    <p>For any privacy-related inquiries, please contact our privacy team at developer@johno.it</p>
     <h3>Data Handling Practices</h3>
     <p>Currently, our application does not access, collect, use, or share personal or sensitive user data. Should this change in the future, we will update this policy to provide comprehensive disclosure of our data handling practices, including the types of personal and sensitive user data accessed, collected, used, and shared, and any parties with which any personal or sensitive user data is shared.</p>
     <h3>Data Security and Retention</h3>
@@ -20,7 +20,7 @@
     <p>Ultimo aggiornamento: 2024-04-06</p>
     <p>Questa applicazione è sviluppata e mantenuta da Johnathan Crawford, e può essere contattata tramite email developer@johno.it</p>
     <p>Questa applicazione non raccoglie né conserva alcun dato personale dei suoi utenti. Funziona senza richiedere, tracciare o condividere alcuna informazione personale. Tuttavia, ci impegniamo a garantire la privacy e la sicurezza dei nostri utenti. Nel caso in cui in futuro l'app dovesse accedere, raccogliere, utilizzare o condividere qualsiasi dato personale o sensibile, questa politica verrà aggiornata di conseguenza per divulgare completamente tali pratiche.</p>
-    <p>Per qualsiasi domanda relativa alla privacy, si prega di contattare il nostro team per la privacy a [Informazioni di contatto].</p>
+    <p>Per qualsiasi domanda relativa alla privacy, si prega di contattare il nostro team per la privacy a developer@johno.it</p>
     <h3>Pratiche di gestione dei dati</h3>
     <p>Attualmente, la nostra applicazione non accede, raccoglie, utilizza o condivide dati personali o sensibili degli utenti. Qualora ciò dovesse cambiare in futuro, aggiorneremo questa politica per fornire una divulgazione completa delle nostre pratiche di gestione dei dati, incluse le tipologie di dati personali e sensibili accessi, raccolti, utilizzati e condivisi, e qualsiasi parte con cui vengono condivisi dati personali o sensibili.</p>
     <h3>Sicurezza e conservazione dei dati</h3>
