--- a/mao.html
+++ b/mao.html
@@ -6,7 +6,7 @@
   <title>Mao Comics Pordenone</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/a2e0e6ed6a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-KxQ4ckEYi4eKjF9EYoxm1a/vG1gJQvR6qE4PO1c8mOvqj1Lzr9zXj+lWTZL6G+zPCrS74u+nps3Dgf7zzWGF8w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     * {
       margin: 0;
