--- a/mao.html
+++ b/mao.html
@@ -36,7 +36,7 @@
       width: 8px;
       height: 8px;
       transform: rotate(45deg);
-      border-radius: 10%; /* Sharper diamond shape */
+      border-radius: 10%;
       box-shadow: 0 0 6px #ffe6a080;
     }
 
@@ -73,16 +73,17 @@
 
     h1 {
       font-size: 3rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.3rem;
+      color: #ffffff;
     }
 
-	.subtitle {
-	  font-size: 1rem;
-	  margin-top: 0.3rem;
-	  margin-bottom: 2rem;
-	  color: #ffd4ec;
-	  opacity: 0.8;
-	}
+    .subtitle {
+      font-size: 1rem;
+      margin-top: 0.2rem;
+      margin-bottom: 2rem;
+      color: #ffd4ec;
+      opacity: 0.8;
+    }
 
     .description {
       font-size: 1.1rem;
@@ -91,9 +92,16 @@
       line-height: 1.6;
     }
 
+    .socials {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      max-width: 90vw;
+    }
+
     .socials a {
       font-size: 3.5rem;
-      margin: 0 2rem;
       color: #fbdada;
       transition: transform 0.3s ease, color 0.3s ease;
     }
@@ -102,56 +110,61 @@
       transform: scale(1.3);
       color: #ffd4ec;
     }
+
+    /* Mobile responsive tweaks */
+    @media (max-width: 500px) {
+      .socials a {
+        font-size: 2.5rem;
+      }
+      .star:nth-child(n+30) {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
   <!-- Starfield -->
   <div class="stars">
-    <!-- Row 1 -->
-    <div class="star diamond" style="top:5%; left:5%; animation-delay: 0s;"></div>
-    <div class="star dot" style="top:5%; left:15%; animation-delay: 0.3s;"></div>
-    <div class="star diamond" style="top:5%; left:30%; animation-delay: 0.6s;"></div>
-    <div class="star dot" style="top:5%; left:45%; animation-delay: 0.9s;"></div>
-    <div class="star diamond" style="top:5%; left:60%; animation-delay: 1.2s;"></div>
-    <div class="star dot" style="top:5%; left:75%; animation-delay: 1.5s;"></div>
-    <div class="star diamond" style="top:5%; left:90%; animation-delay: 1.8s;"></div>
+    <div class="star diamond" style="top:10vh; left:5vw;"></div>
+    <div class="star dot" style="top:10vh; left:15vw;"></div>
+    <div class="star diamond" style="top:10vh; left:30vw;"></div>
+    <div class="star dot" style="top:10vh; left:45vw;"></div>
+    <div class="star diamond" style="top:10vh; left:60vw;"></div>
+    <div class="star dot" style="top:10vh; left:75vw;"></div>
+    <div class="star diamond" style="top:10vh; left:90vw;"></div>
 
-    <!-- Row 2 -->
-    <div class="star dot" style="top:20%; left:10%; animation-delay: 0.4s;"></div>
-    <div class="star diamond" style="top:20%; left:25%; animation-delay: 0.7s;"></div>
-    <div class="star dot" style="top:20%; left:40%; animation-delay: 1s;"></div>
-    <div class="star diamond" style="top:20%; left:55%; animation-delay: 1.3s;"></div>
-    <div class="star dot" style="top:20%; left:70%; animation-delay: 1.6s;"></div>
-    <div class="star diamond" style="top:20%; left:85%; animation-delay: 1.9s;"></div>
+    <div class="star dot" style="top:25vh; left:10vw;"></div>
+    <div class="star diamond" style="top:25vh; left:25vw;"></div>
+    <div class="star dot" style="top:25vh; left:40vw;"></div>
+    <div class="star diamond" style="top:25vh; left:55vw;"></div>
+    <div class="star dot" style="top:25vh; left:70vw;"></div>
+    <div class="star diamond" style="top:25vh; left:85vw;"></div>
 
-    <!-- Row 3 -->
-    <div class="star diamond" style="top:40%; left:5%; animation-delay: 0.5s;"></div>
-    <div class="star dot" style="top:40%; left:20%; animation-delay: 0.8s;"></div>
-    <div class="star diamond" style="top:40%; left:35%; animation-delay: 1.1s;"></div>
-    <div class="star dot" style="top:40%; left:50%; animation-delay: 1.4s;"></div>
-    <div class="star diamond" style="top:40%; left:65%; animation-delay: 1.7s;"></div>
-    <div class="star dot" style="top:40%; left:80%; animation-delay: 2s;"></div>
+    <div class="star diamond" style="top:45vh; left:5vw;"></div>
+    <div class="star dot" style="top:45vh; left:20vw;"></div>
+    <div class="star diamond" style="top:45vh; left:35vw;"></div>
+    <div class="star dot" style="top:45vh; left:50vw;"></div>
+    <div class="star diamond" style="top:45vh; left:65vw;"></div>
+    <div class="star dot" style="top:45vh; left:80vw;"></div>
 
-    <!-- Row 4 -->
-    <div class="star dot" style="top:60%; left:10%; animation-delay: 0.3s;"></div>
-    <div class="star diamond" style="top:60%; left:25%; animation-delay: 0.6s;"></div>
-    <div class="star dot" style="top:60%; left:40%; animation-delay: 0.9s;"></div>
-    <div class="star diamond" style="top:60%; left:55%; animation-delay: 1.2s;"></div>
-    <div class="star dot" style="top:60%; left:70%; animation-delay: 1.5s;"></div>
-    <div class="star diamond" style="top:60%; left:85%; animation-delay: 1.8s;"></div>
+    <div class="star dot" style="top:65vh; left:10vw;"></div>
+    <div class="star diamond" style="top:65vh; left:25vw;"></div>
+    <div class="star dot" style="top:65vh; left:40vw;"></div>
+    <div class="star diamond" style="top:65vh; left:55vw;"></div>
+    <div class="star dot" style="top:65vh; left:70vw;"></div>
+    <div class="star diamond" style="top:65vh; left:85vw;"></div>
 
-    <!-- Row 5 -->
-    <div class="star diamond" style="top:80%; left:5%; animation-delay: 0.4s;"></div>
-    <div class="star dot" style="top:80%; left:20%; animation-delay: 0.7s;"></div>
-    <div class="star diamond" style="top:80%; left:35%; animation-delay: 1s;"></div>
-    <div class="star dot" style="top:80%; left:50%; animation-delay: 1.3s;"></div>
-    <div class="star diamond" style="top:80%; left:65%; animation-delay: 1.6s;"></div>
-    <div class="star dot" style="top:80%; left:80%; animation-delay: 1.9s;"></div>
+    <div class="star diamond" style="top:85vh; left:5vw;"></div>
+    <div class="star dot" style="top:85vh; left:20vw;"></div>
+    <div class="star diamond" style="top:85vh; left:35vw;"></div>
+    <div class="star dot" style="top:85vh; left:50vw;"></div>
+    <div class="star diamond" style="top:85vh; left:65vw;"></div>
+    <div class="star dot" style="top:85vh; left:80vw;"></div>
   </div>
 
-  <!-- Content -->
+  <!-- Main Content -->
   <div class="content">
-    <img src="assets/logo.png" alt="Mao Comics Logo" class="logo" />
+    <img src="logo_upscaled_cleaned.png" alt="Mao Comics Logo" class="logo" />
     <h1>Mao Comics</h1>
     <div class="subtitle">Pordenone</div>
     <p class="description">
@@ -159,7 +172,7 @@
     </p>
     <div class="socials">
       <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
       <a href="#"><i class="fab fa-instagram"></i></a>
     </div>
   </div>
