--- a/mao.html
+++ b/mao.html
@@ -88,7 +88,7 @@
     .description {
       font-size: 1.1rem;
       max-width: 600px;
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
       line-height: 1.6;
     }
 
@@ -164,7 +164,7 @@
 
   <!-- Main Content -->
   <div class="content">
-    <img src="logo_upscaled_cleaned.png" alt="Mao Comics Logo" class="logo" />
+    <img src="assets/logo.png" alt="Mao Comics Logo" class="logo" />
     <h1>Mao Comics</h1>
     <div class="subtitle">Pordenone</div>
     <p class="description">
